# fluentci-studio

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: deploy.yml  release-app-for-mac-12.yml  release-app-for-mac-14.yml  release-app-for-mac-arm64.yml  release-app-for-mac-x86_64.yml  release-app.yml  release-for-mac.yml  release.yml  tests.yml
src/: main.rs
webui/: .gitignore  README.md  bun.lockb  codegen.yml  electron-builder.json5  graphql.schema.json  index.html  package.json  tsconfig.json  vite.config.ts  vite.dev.config.ts
webui/electron/main/: index.ts
webui/electron/preload/: index.ts
webui/src/: App.tsx  consts.tsx  firebase.ts  index.css  main.tsx  recoil.tsx
webui/src-tauri/: Cargo.toml  tauri.conf.json
webui/src/Components/AskAI/: AskAI.tsx  AskAiWithData.tsx  PromptsState.tsx  index.tsx  styles.tsx
webui/src/Components/Duration/: Duration.test.tsx  Duration.tsx  index.tsx  styles.tsx
webui/src/Components/Header/: Header.test.tsx  Header.tsx  HeaderWithData.tsx  PipelineState.tsx  styles.tsx
webui/src/Components/LogsViewer/: LogsViewer.test.tsx  LogsViewer.tsx  LogsViewerWithData.tsx  index.tsx
webui/src/Components/Navbar/: Navbar.test.tsx  Navbar.tsx  NavbarWithData.tsx  index.tsx  styles.tsx
webui/src/Components/SideNavigation/: SideNavigation.tsx  SideNavigationState.tsx  SideNavigationWithData.tsx  index.tsx
webui/src/GraphQL/: Fragment.tsx
webui/src/Hooks/: GraphQL.tsx  useFormat.tsx
webui/src/Layouts/: CurrentUser.tsx  Root.tsx
webui/src/Providers/: ApolloProvider.tsx
webui/src/Themes/: index.tsx
(+235 files in other folders)
