[package]
edition = "2021"
name = "fluentci-studio"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
mime_guess = "2.0.4"
owo-colors = "4.0.0"
reqwest = {version = "0.11.24", features = ["rustls-tls"], default-features = false}
rust-embed = {version = "8.2.0", features = ["debug-embed", "actix"]}
