[package]
edition = "2021"
name = "fluentci-studio"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
futures-util = "0.3.30"
mime_guess = "2.0.5"
owo-colors = "4.0.0"
rust-embed = { version = "8.5.0", features = ["debug-embed", "actix"] }
time = "0.3.36"
